--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -151,9 +151,7 @@ bind = $mainMod SHIFT, Z, exec, killall waybar
 bind = $mainMod, Y, exec, $termchange -e "$HOME/.local/bin/yt"
 bind = $mainMod, W, exec, $termchange -e nmtui-connect
 bind = $mainMod, A, exec, $termchange -e alsamixer
-bind = $mainMod, H, exec, $termchange -e 'view $HOME/.test'
-bind = $mainMod SHIFT, H, exec, firefox https://gist.github.com/yannsi/8ebceef7192b82e71febddd809eaacad#file-hyprland-conf
-
+bind = $mainMod, H, exec, $termchange -e terminator -e 'gum pager --border=none < $HOME/.config/hypr/help.txt'
 bind = Ctrl Alt, F, exec, flameshot gui
 bind = Ctrl Alt, V, exec, $termchange -e cava
 
