--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -153,7 +153,7 @@ bind = $mainMod, W, exec, $termchange -e nmtui-connect
 bind = $mainMod, A, exec, $termchange -e alsamixer
 bind = $mainMod, H, exec, $termchange -e terminator -e 'gum pager --border=none < $HOME/.config/hypr/help.txt'
 bind = Ctrl Alt, F, exec, flameshot gui
-bind = Ctrl Alt, V, exec, $termchange -e cava
+bind = Ctrl Alt, V, exec, kitty cava
 
 
 # Example volume button that allows press and hold, volume limited to 150%
