--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -19,7 +19,9 @@ monitor=,preferred,auto,1
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
-
+xwayland {
+  force_zero_scaling = true
+}
 
 # Execute your favorite apps at launch (お気に入りのアプリを起動時に実行)
 # exec-once = waybar & hyprpaper & firefox
